@@ -1,5 +1,13 @@
 OCaml 4.14.0
 
+### Build system:
+
+- #10???: --with-target-bindir configure option implemented. This option
+  refers to the location of the runtime binaries on the target system for a
+  cross-compiler and is embedded in executables produced by ocamlc. It does
+  not affect the bytecode executables installed as part of the build.
+  (David Allsopp, review by ???)
+
 ### Bug fixes:
 
 - #10???: Correct the RNTM bytecode section (-use-runtime mode) for paths
